fixed nav bar spacing on rl index page

--- a/reading-lists/app/assets/stylesheets/application.css
+++ b/reading-lists/app/assets/stylesheets/application.css
@@ -31,7 +31,7 @@ body {
 nav {
   background-color: #000000;
   margin: 0;
-  padding: 30px 0px 10px;
+  padding-top: 30px;
   font-family: Shadows Into Light;
   font-weight: bold;
   color: #cc9a66;
@@ -42,17 +42,33 @@ a {
   color: #000000;
 }
 
-nav a {
-  padding: 10px;
-  color: #cc9a66;
-  font-size: 24px;
+ul {
+  float: right;
+  list-style-type: none;
+  margin-top: 40px;
 }
 
-nav h1 {
+li {
   display: inline;
-  padding-right: 45%;
-  padding-left: 2%;
+  padding-right: 20px;
+}
+
+.header {
+  color: #cc9a66;
+}
+
+.nav_h1 {
   font-size: 48px;
+  padding-left: 40px;
+}
+
+h1 {
+  display: inline;
+  font-size: 2em;
+}
+
+h2 {
+  margin: 0;
 }
 
 .x-button {
@@ -77,14 +93,6 @@ form {
 
 .delete {
   float: right;
-}
-
-h1 {
-  display: inline;
-}
-
-h2 {
-  margin: 0;
 }
 
 .books_h2 {
